<resources>
    <string name="app_name">poop-bags</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>
    <string name="favourites">Favourites</string>
    <string name="welcome_user">Welcome, %1$s</string>
    <string name="posts">posts</string>
    <string name="username_placeholder">username placeholder</string>
    <string name="edit_profile">edit profile</string>
    <string name="profile_picture">Profile picture</string>
    <string name="profile_image">profile image</string>
    <string name="username_required">username required</string>
    <string name="invalid_email">invalid_email</string>
    <string name="username">username</string>
    <string name="email">email</string>
    <string name="save">save</string>
    <string name="choose_image_source">choose image source</string>
    <string name="image_sources">image sources</string>
    <string name="back_button">Navigate back</string>
    <string name="back_button_description">Navigate back</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_email">Enter email address</string>
    <string name="no_favorites">No favorite posts yet</string>
    <string name="post_image">Post image</string>
    <string name="no_posts">No posts yet</string>
    <string name="my_posts">My Posts</string>
    <string name="likes_count">%d likes</string>
    <string name="delete">Delete</string>
    <string name="like_button">Like</string>
    <string name="commentButton">comment</string>
    <string name="title_map">Map</string>
    <string name="add_image">Add Image</string>
    <string name="upload">upload</string>
    <string name="station_name">Station Name</string>
    <string name="address">Address</string>
    <string name="back">Back</string>
    <string name="add_post">Add Post</string>
    <string name="ui_setup_error">UI setup error: %1$s</string>
    <string name="navigation_error">Navigation error: %1$s</string>
    <string name="log_out">User logged out successfully</string>
    <string name="station_image">station image</string>
    <string name="coordinates">coordinates</string>
    <string name="add_station">Add Station</string>
    <string name="edit_station">Edit Station</string>
    <string name="save_changes">save changes</string>
    <string name="location_info">location info</string>
    <string name="location_auto_detect">the location will be detected automatically from your device</string>
    <string name="update_location">update location</string>
    <string name="my_stations">My Stations</string>
    <string name="no_stations">no stations yet</string>
    <string name="change_image">change image</string>
    <string name="comments">comments</string>
    <string name="title_stations">Stations</string>
    <string name="no_stations_found">no stations found</string>
    <string name="title_add_station">add station</string>
    <string name="title_edit_station">edit station</string>
    <string name="welcome_title_text">Welcome To PoopBags!</string>
    <string name="welcome_subtitle_text">Join the community\n of responsible pet owners</string>
    <string name="sign_in_text">Sign In</string>
    <string name="sign_in_subtitle">Please sign in to continue</string>
    <string name="register_text">Register</string>
    <string name="register_subtitle">Please register to continue</string>
    <string name="welcome_image_description">Welcome Image</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="username_hint">Username</string>"
    <string name="comment_user_image">User Image</string>
    <string name="station_details">Station Details</string>
    <string name="like_icon">Like Icon</string>
    <string name="star_icon">Star Icon</string>
    <string name="comment_input_hint">Add a comment…</string>
    <string name="send_comment">Send Comment</string>
</resources>