<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@+id/navigation_explore">

    <fragment
        android:id="@+id/navigation_explore"
        android:name="com.final_project.poop_bags.modules.explore.ExploreFragment"
        android:label="@string/title_explore"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_stations"
        android:name="com.final_project.poop_bags.modules.stations.StationsFragment"
        android:label="@string/title_stations">
        <argument
            android:name="userId"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
        
        <action
            android:id="@+id/action_stations_to_add_station"
            app:destination="@id/navigation_add_station" />
    </fragment>

    <fragment
        android:id="@+id/navigation_add_station"
        android:name="com.final_project.poop_bags.modules.addStation.AddStationFragment"
        android:label="@string/title_add_station"
        tools:layout="@layout/fragment_add_station">
        
        <argument
            android:name="stationId"
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.final_project.poop_bags.modules.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile">
        
        <action
            android:id="@+id/action_profileFragment_to_editProfileFragment"
            app:destination="@id/editProfileFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_profileFragment_to_favouritesFragment"
            app:destination="@id/favouritesFragment" />
        <action
            android:id="@+id/action_profileFragment_to_stationsFragment"
            app:destination="@id/navigation_stations" />
        <action
            android:id="@+id/action_navigation_profile_to_favouritesFragment"
            app:destination="@id/favouritesFragment" />
    </fragment>

    <fragment
        android:id="@+id/editProfileFragment"
        android:name="com.final_project.poop_bags.modules.editProfile.EditProfileFragment"
        android:label="@string/edit_profile"
        tools:layout="@layout/fragment_edit_profile" />

    <fragment
        android:id="@+id/favouritesFragment"
        android:name="com.final_project.poop_bags.modules.favorites.FavoritesFragment"
        android:label="@string/favourites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/navigation_edit_station"
        android:name="com.final_project.poop_bags.modules.editStation.EditStationFragment"
        android:label="@string/title_edit_station"
        tools:layout="@layout/fragment_edit_station">
        
        <argument
            android:name="stationId"
            app:argType="string" />
    </fragment>
</navigation>